# crab-certbundle

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-rocky8.yml  ci-rocky9.yml  ci.yml  release.yml
certbundle/: __init__.py  cert.py  cli.py  config.py  crl.py  output.py  policy.py  rehash.py  reporting.py  validation.py
certbundle/sources/: __init__.py  base.py  http.py  igtf.py  local.py  system.py
crab/: __init__.py  _commit.py  cert.py  cli.py  config.py  crl.py  logfmt.py  output.py  pki.py  pki_config.py  policy.py  rehash.py  reporting.py  status.py  templates.py  validation.py
crab/schema/: crab.yaml.json
crab/sources/: __init__.py  base.py  http.py  igtf.py  local.py  system.py
docker/: Dockerfile  Dockerfile.pki  entrypoint.sh
docs/: ARCHITECTURE.md
examples/: compose-pki.yaml  config-full.yaml  config-grid.yaml  config-minimal.yaml  config-srcnet.yaml  docker-compose.pki.yml
packaging/deb/: build-deb.sh
packaging/deb/debian/: changelog  control  prerm  (+4 more)
packaging/rpm/: crab-certbundle.spec
scripts/: compose-pki.sh
systemd/: README.md  certbundle.service  certbundle.timer
tests/: conftest.py  test_cert.py  test_cli.py  test_config.py  test_crl.py  test_deb_packaging.py  test_http.py  test_igtf.py  test_logfmt.py  test_output.py  test_pki.py  test_pki_config.py  test_policy.py  test_rehash.py  test_reporting.py  test_schema.py  test_sources.py  test_status.py  test_validation.py
tests/integration/: test_pipeline.py
