[metadata]
name = crabctl
version = 0.1.0
description = Generate and update OpenSSL-style CA certificate directories for research infrastructure
long_description = file: README.md
long_description_content_type = text/markdown
author = SRCNet Infrastructure
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: Security :: Cryptography
    Topic :: System :: Systems Administration
    Intended Audience :: System Administrators
    Development Status :: 4 - Beta
keywords = x509 pki trust-anchor igtf openssl capath certificates grid

[options]
packages = find:
python_requires = >=3.6
install_requires =
    cryptography>=2.8
    PyYAML>=5.1
    click>=7.0
    requests>=2.20

[options.extras_require]
openssl =
    pyOpenSSL>=19.0
dev =
    pytest>=6.0
    pytest-cov>=2.0
    freezegun>=1.0

[options.entry_points]
console_scripts =
    crabctl = crab.cli:main

[options.package_data]
crab = py.typed

[tool:pytest]
testpaths = tests
addopts = -v --tb=short

[flake8]
max-line-length = 100
extend-ignore = E203, W503
